--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
 
 <body>
     <main>
-        <h1>Background Generator</h1>
+        <h1>Background Color Generator</h1>
         <div>
+            <h4>Background Gradient</h4>
             <input id="color1" type="color" name="color1" value="#2B5261">
             <input id="color2" type="color" name="color2" value="#7E436C">
+            <select name="" id="">
+                <option value="to left">To Left</option>
+                <option value="to right">To Right</option>
+                <option value="to top">To Top</option>
+                <option value="to bottom">To Bottom</option>
+                <option value="145deg">45 Degrees</option>
+                <option value="145deg">90 Degrees</option>
+            </select>
         </div>
-        <h2>Generated Color</h2>
+        <h2>Generated Background Color</h2>
         <h3></h3>
     </main>
+    <footer>
+        <h4>Font Color <input id="fontColor" type="color" value="#D3D3D3"></h4>
+    </footer>
     <script src="./script.js"></script>
 </body>
 
